# myLibrary

./: .gitignore  CMakeLists.txt  Doxyfile  README.ko.md  README.md  init_database.sh  package-lock.json  quick_build.sh  setup_database.sh  setup_db.sql  test_metadata_extraction.sh  upgrade_db.sql
cmake/: Dependencies.cmake
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend-vite/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend-vite/design/: APP_DESIGN_GUIDE.md  APP_DESIGN_GUIDE_EN.md
frontend-vite/public/: manifest.json  sw.js
frontend-vite/src/: main.ts  style.css
frontend-vite/src/lib/: api.ts  auth.ts  books.ts  pwa.ts  router.ts  storage.ts  thumbnail-storage.ts  types.ts
frontend-vite/src/lib/core/: BaseComponent.ts  EventBus.ts  Router.ts  types.ts
frontend-vite/src/lib/pages/: AdminPage.ts  AuthPage.ts  LibraryPage.ts
frontend-vite/src/lib/readers/: comic-reader.ts  epub-reader.ts  pdf-reader.ts  reader-manager.ts
frontend/.next/: prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  clsx.js  lucide-react.js  tailwind-merge.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: df61f246c3fa2c54.webpack.hot-update.json  (+6 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BookCard.tsx  BookGrid.tsx  BookReader.tsx  BookUpload.tsx  Library.tsx  LoadingSpinner.tsx  LoginForm.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
include/: auth.h  book_manager.h  collection_manager.h  database.h  epub_parser.h  http_server.h  library_scanner.h
notes/: 2025-08-26_14-35_thumbnail_system_improvement_plan.md  2025-08-26_16-18_admin_page_and_symlink_support.md  2025-08-26_18-34_최우선해결과제.md  2025-08-26_19-15_개발로드맵_우선순위별정리.md  2025-08-27_프로젝트_청사진_v2.md  2025-08-27_할일목록_TODO.md  frontend_vite_implementation.md  progress_report_20250826.md
src/: auth.cpp  book_manager.cpp  book_manager.cpp.backup  collection_manager.cpp  database.cpp  http_server.cpp  library_scanner.cpp  main.cpp
web/: app.js  index.html  manifest.json  offline.html  sw.js
(+16 files in other folders)
